--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     ></script>
 
     <!-- main script -->
-    <script defer src="./script.js"></script>
+    <script defer src="./script.js" type="module"></script>
     <title>Flightsy</title>
   </head>
   <body>
