--- a/daftar.html
+++ b/daftar.html
@@ -16,8 +16,8 @@
           </button>
           <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <a class="navbar-brand align-middle mx-2" href="#">
-              <img src="https://placebear.com/30/24" alt="brand-logo" width="30" height="24" class="d-inline-block align-text-top rounded float-start" />
-              <span class="fw-semibold mx-2">flighsy</span>
+              <img src="./gambar/large_fligght.png" alt="brand-logo" width="170" height="70" class="d-inline-block align-text-top rounded float-start" />
+              <!-- <span class="fw-semibold mx-2">flighsy</span> -->
             </a>
             <div class="navbar-nav mr-auto mb-2 mb-lg-0">
               <div class="nav-item">
