--- a/jadwal.html
+++ b/jadwal.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
+    <link rel="stylesheet" href=“./“style.css>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
   </head>
   <body>
@@ -16,8 +18,8 @@
           </button>
           <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <a class="navbar-brand align-middle mx-2" href="#">
-              <img src="./gambar/large_fligght.png" width="150" height="40" alt="brand-logo" class="d-inline-block align-text-top rounded float-start" />
-              <span class="fw-semibold mx-2">flighsy</span>
+              <img src="./gambar/large_fligght.png" width="170" height="70" alt="brand-logo" class="d-inline-block align-text-top rounded float-start" />
+              <!-- <span class="fw-semibold mx-2">flighsy</span> -->
             </a>
             <div class="navbar-nav mr-auto mb-2 mb-lg-0">
               <div class="nav-item">
@@ -25,6 +27,9 @@
               </div>
               <div class="nav-item">
                 <a class="nav-link mx-2" href="#">Contact Us</a>
+              </div>
+              <div class="nav-item mx-2">
+                <button onclick="akun()" type="button"><img src="./gambar/akun2.png" width="60" height="40" alt="akun" /></button>
               </div>
               <div class="nav-item mx-2">
                 <button onclick="logout()" type="button" class="btn btn-primary" style="background-color: rgb(45, 163, 193)">Logout</button>
@@ -36,7 +41,7 @@
     </section>
     <!-- navbar end -->
     <!--formulir-->
-    <div class="container mt-5 pt-5">
+    <div class="container mt-5 pt-5 py-5">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 py-5 px-5 shadow" style="background-color: #d7f7fb; background-image: linear-gradient(white, rgb(172, 225, 246))">
@@ -56,9 +61,11 @@
                       <option value="Jakarta">Jakarta</option>
                       <option value="Bandung">Bandung</option>
                       <option value="Solo">Solo</option>
-                      <option value="yogjakarta">yogjakarta</option>
+                      <option value="yogjyakarta">yogyakarta</option>
                       <option value="Bali">Bali</option>
                       <option value="Palembang">Palembang</option>
+                      <option value="Papua">Papua</option>
+                      <option value="Nusa Tenggara Timur">Nusa Tenggara Timur</option>
                     </select>
                   </div>
                   <div class="col mb-3">
@@ -68,9 +75,11 @@
                       <option value="Jakarta">Jakarta</option>
                       <option value="Bandung">Bandung</option>
                       <option value="Solo">Solo</option>
-                      <option value="yogjakarta">yogjakarta</option>
+                      <option value="yogyakarta">yogyakarta</option>
                       <option value="Bali">Bali</option>
                       <option value="Palembang">Palembang</option>
+                      <option value="Papua">Papua</option>
+                      <option value="Nusa Tenggara Timur">Nusa Tenggara Timur</option>
                     </select>
                   </div>
                 </div>
@@ -105,6 +114,59 @@
       </div>
     </div>
     <!---akhir formulir-->
+    <!---galeri-->
+    <div class="container">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 justify-content-center pb-3">
+            <div class="d-flex justify-content-center" style="font-size: 40px">Destinasi Populer</div>
+          </div>
+
+          <div class="col-4 px-4 py-4">
+            <img src="./gambar/5fabf6158ce8a.jpg" width="400" height="270" alt="bandung" />
+            <p class="d-flex justify-content-center" style="font-size: 30px">Bandung</p>
+          </div>
+          <div class="col-4 px-4 py-4">
+            <img src="./gambar/wisata-jogja.jpg" width="400" height="270" alt="yogja" />
+            <p class="d-flex justify-content-center" style="font-size: 30px">Yogyakarta</p>
+          </div>
+
+          <div class="col-4 px-4 py-4">
+            <img src="./gambar/bali.jpg" width="400" height="270" alt="bali" />
+            <p class="d-flex justify-content-center" style="font-size: 30px">Bali</p>
+          </div>
+          <div class="col-4 px-4 py-4">
+            <img src="./gambar/Raja-Ampat.png" class="img-fluid" alt="Papua" />
+            <p class="d-flex justify-content-center" style="font-size: 30px">Papua</p>
+          </div>
+          <div class="col-4 px-4 py-4">
+            <img src="./gambar/Wisata-Pantai-Timor.jpg" height="270" width="400" alt="nusa tenggara timur" />
+            <div class="d-flex justify-content-center" style="font-size: 30px">Nusa Tenggara Timur</div>
+          </div>
+          <div class="col-4 px-4 py-4">
+            <img src="./gambar/Taman-Mini-Indonesia-Indah.jpg" width="400" class="img-fuid" alt="Jakarta" />
+            <p class="d-flex justify-content-center" style="font-size: 30px">Jakarta</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--AKHIR GALERI-->
+
+    <!---footer-->
+    <div class="justify-content-end">
+      <footer class="py-5 my-5" style="background-color: black">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="#" class="nav-link px-2" style="color: white">Home</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2" style="color: white">Features</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2" style="color: white">Pricing</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2" style="color: white">FAQs</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2" style="color: white">About</a></li>
+        </ul>
+        <p class="text-center font-white" style="color: white">Copyright© 2022 by flightsy</p>
+      </footer>
+    </div>
+
+    <!----akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="./jadwal.js"></script>
   </body>
