--- a/jadwal.html
+++ b/jadwal.html
@@ -29,7 +29,9 @@
                 <a class="nav-link mx-2" href="#">Contact Us</a>
               </div>
               <div class="nav-item mx-2">
-                <button onclick="akun()" type="button"><img src="./gambar/akun2.png" width="60" height="40" alt="akun" /></button>
+                <!-- <button onclick="akun()" type="button">  -->
+                <img src="./gambar/account 1.png" onclick="akun()" width="40" height="40" alt="akun" />
+                <!-- </button> -->
               </div>
               <div class="nav-item mx-2">
                 <button onclick="logout()" type="button" class="btn btn-primary" style="background-color: rgb(45, 163, 193)">Logout</button>
