--- a/masuk.html
+++ b/masuk.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+    <link rel="stylesheet" href="masuk.css">
   </head>
   <body>
     <!-- navbar start -->
@@ -44,17 +45,17 @@
             <img src="./gambar/5165306.jpg" class="rounded float-start img-fluid" alt="">
          </div>
           <div class="col-6 my-5 py-5 shadow" style="background-color: #d7f7fb; background-image: linear-gradient(white,rgb(172, 225, 246))">
-            <legend>Login Keakun Anda</legend>
-            <div>
+            <legend style="font-size:30px ;">Login Keakun Anda</legend>
+            <div class="masuk">
               <div class="mp-3 mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" />
+                <label for="exampleInputEmail1" class="form-label" style="font-size: 25px;">Email</label>
+                <input type="email" class="form-control" id="email" style="font-size:25px ;" />
               </div>
-              <div class="mp-3">
+              <div class="mp-3" style ="font-size:25px ;">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" />
                 <br></br>
-                <input type="checkbox" onclick="sandi()"> tampilkan sandi
+                <input type="checkbox" onclick="sandi()" style="font-size: 20px;"> tampilkan sandi
               </div>
               <br /><br />
               <button onclick="masuk()" class="border-0 px-4 py-2 " style="background-color: #1285c2; color: white;">Login</button>
