basic search flow

--- a/pemesanan/index.html
+++ b/pemesanan/index.html
@@ -37,13 +37,30 @@
   </head>
   <body>
     <!-- navbar start -->
-    <section id="navbar"></section>
+    <section id="navbar">
+      <nav class="navbar navbar-expand-md shadow-sm text-bg-info p-3">navbar</nav>
+    </section>
     <!-- navbar end -->
 
     <!-- pemesanan start -->
     <section id="pemesanan">
-      <div id="pemesananHeader" class="mt-5"></div>
-      <div id="pemesananInfo" class="mt-5"></div>
+      <div id="pemesananHeader" class="mt-5">
+        <!-- pemesanan header -->
+      </div>
+      <div class="container mt-5 px-0">
+        <div class="row">
+          <div class="col-xl-8">
+            <div id="pemesananInfo">
+              <!-- pemesanan info -->
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <div id="pemesananRincian">
+              <!-- pemesanan rincian -->
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- pemesanan end -->
 
