--- a/pencarian/index.html
+++ b/pencarian/index.html
@@ -32,7 +32,9 @@
   </head>
   <body>
     <!-- navbar start -->
-    <section id="navbar"></section>
+    <section id="navbar">
+      <nav class="navbar navbar-expand-md shadow-sm text-bg-info p-3">navbar</nav>
+    </section>
     <!-- navbar end -->
 
     <!-- pencarian start -->
