--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <title>Flightsy</title>
   </head>
   <body>
-    <h1>Hello!</h1>
+    <section id="navbar">
+      <nav class="navbar navbar-expand-md shadow-sm text-bg-info p-3">navbar</nav>
+    </section>
+    <div class="container-fluid d-flex align-items-center justify-content-center vh-100 vw-100">
+      <button id="searchTix" type="button">Search</button>
+    </div>
   </body>
 </html>
