--- a/jadwal.html
+++ b/jadwal.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href=“./“style.css>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+    <link rel="stylesheet" href="masuk.css" />
   </head>
   <body>
     <!-- navbar start -->
@@ -30,7 +29,7 @@
               </div>
               <div class="nav-item mx-2">
                 <!-- <button onclick="akun()" type="button">  -->
-                <img src="./gambar/account 1.png" onclick="akun()" width="40" height="40" alt="akun" />
+                <img src="./gambar/account-6491185_960_720.png" onclick="akun()" width="40" height="40" alt="akun" />
                 <!-- </button> -->
               </div>
               <div class="nav-item mx-2">
@@ -47,7 +46,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 py-5 px-5 shadow" style="background-color: #d7f7fb; background-image: linear-gradient(white, rgb(172, 225, 246))">
-            <div class="row">
+            <div class="row" id="jadwal">
               <div class="col-6">
                 <div class="row mb-3">
                   <div class="form-check">
