--- a/daftar.html
+++ b/daftar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+    <link rel="stylesheet" href="masuk.css" />
   </head>
   <body>
     <!-- navbar start -->
@@ -40,7 +41,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 py-5 px-5 shadow" style="background-color: #d7f7fb; background-image: linear-gradient(white, rgb(172, 225, 246))">
-            <legend>Gabung menjadi member kami</legend>
+            <div style="font-size:30px ;">Gabung menjadi member kami</legend>
             <br /><br />
             <div class="row">
               <div class="col-6">
@@ -57,7 +58,7 @@
                   <input type="date" id="Tanggal" class="form-control" placeholder="09-10-1995" />
                 </div>
                 <br /><br />
-                <a href="./jadwal.html" style="text-decoration: none">kembali ke home</a>
+                <a href="./jadwal.html" class="link" style="text-decoration: none">kembali ke home</a>
               </div>
               <div class="col-6">
                 <div class="col mb-3">
@@ -70,7 +71,7 @@
                 </div>
                 <br /><br />
                 <div class="container-fluid text-end">
-                  <button onclick="daftar()" id="btn-daftar" type="submit" class="btn, border-0 px-5 py-2 ,col-md-8" style="background-color: #1285c2; color: white">Daftar</button>
+                  <button onclick="daftar()" id="btn-daftar" type="submit" class="btn, border-0 px-5 py-2 ,col-md-8" style="background-color: #1285c2; color: white; font-size: 20px;">Daftar</button>
                 </div>
               </div>
             </div>
