--- a/masuk.html
+++ b/masuk.html
@@ -48,27 +48,26 @@
             <legend style="font-size:30px ;">Login Keakun Anda</legend>
             <div class="masuk">
               <div class="mp-3 mb-3">
-                <label for="exampleInputEmail1" class="form-label" style="font-size: 25px;">Email</label>
-                <input type="email" class="form-control" id="email" style="font-size:25px ;" />
+                <label for="exampleInputEmail1" class="form-label" style="font-size: 20px;">Email</label>
+                <input type="email" class="form-control" id="email" style="font-size:20px ;" />
               </div>
-              <div class="mp-3" style ="font-size:25px ;">
+              <div class="mp-3" style ="font-size:20px ;">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" />
                 <br></br>
                 <input type="checkbox" onclick="sandi()" style="font-size: 20px;"> tampilkan sandi
               </div>
               <br /><br />
-              <button onclick="masuk()" class="border-0 px-4 py-2 " style="background-color: #1285c2; color: white;">Login</button>
-            </div>
-            <br />
-            <p>Belum punya akun ?</p>
-            <a href="http://127.0.0.1:5500/daftar.html" style="text-decoration: none">Daftar</a>
+             <div class="link">
+              <button onclick="masuk()" class="border-0 px-4 py-2 " style="background-color: #1285c2; color: white; font-size: 20px;">Login</button>
+              <br />
+              <p>Belum punya akun ?</p>
+              <a href="http://127.0.0.1:5500/daftar.html" style="text-decoration: none">Daftar</a>
+             </div>
+            </div> 
           </div>
-          
-        </div> 
+        </div>
       </div>
-    </div>
-  </div>
     <script src="./daftar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   
