--- a/payment-gateway/index.html
+++ b/payment-gateway/index.html
@@ -3,22 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Flightsy</title>
+    <title>Flightsy - Payment</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-    <!-- main script -->
-    <script defer src="./script.js" type="module"></script>
+    <script defer src="./payment.js" type="module"></script>
   </head>
   <body id="page-container">
     <section id="navbar">
@@ -26,12 +25,8 @@
     </section>
 
     <section id="page-content">
-      <section id="formulirJadwal" class="mt-5">
+      <section id="payment" class="mt-5">
         <!-- formulir jadwal -->
-      </section>
-
-      <section id="gallery" class="mt-5">
-        <!-- gallery -->
       </section>
     </section>
 
